--- a/docs/locale/de/LC_MESSAGES/introduction.po
+++ b/docs/locale/de/LC_MESSAGES/introduction.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: JudaicaLink Documentation 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-21 11:18+0100\n"
+"POT-Creation-Date: 2025-03-03 12:53+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: de\n"
@@ -20,15 +20,15 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.17.0\n"
 
-#: ../../introduction.rst:3
+#: ../introduction.rst:3
 msgid "Introduction to JudaicaLink"
 msgstr "Einführung in JudaicaLink"
 
-#: ../../introduction.rst:6
+#: ../introduction.rst:6
 msgid "What is JudaicaLink?"
 msgstr "Was ist JudaicaLink?"
 
-#: ../../introduction.rst:8
+#: ../introduction.rst:8
 msgid ""
 "JudaicaLink is a Linked Open Data project that provides structured, "
 "interconnected knowledge about Jewish history, culture, and scholarship. "
@@ -42,7 +42,7 @@ msgstr ""
 "Forscher, Historiker, Bibliothekare und die akademische Gemeinschaft "
 "leicht zugänglich, durchsuchbar und wiederverwendbar zu machen."
 
-#: ../../introduction.rst:10
+#: ../introduction.rst:10
 msgid ""
 "By integrating various datasets, JudaicaLink connects existing digital "
 "archives, authority files, and bibliographic resources into a *knowledge "
@@ -53,19 +53,19 @@ msgstr ""
 "in einem *Knowledge Graph*, was eine effizientere Erkundung jüdischer "
 "Quellen ermöglicht."
 
-#: ../../introduction.rst:13
+#: ../introduction.rst:13
 msgid "Project Goals and Functions"
 msgstr "Projektziele und Funktionen"
 
-#: ../../introduction.rst:15
+#: ../introduction.rst:15
 msgid ""
 "JudaicaLink serves as a *centralized hub* for structured Jewish studies "
 "data, offering:"
 msgstr ""
-"JudaicaLink dient als *zentraler Knotenpunkt* für strukturierte Daten aus "
-"den Jüdischen Studien und bietet:"
+"JudaicaLink dient als *zentraler Knotenpunkt* für strukturierte Daten aus"
+" den Jüdischen Studien und bietet:"
 
-#: ../../introduction.rst:17
+#: ../introduction.rst:17
 msgid ""
 "*Knowledge Graph*: A linked data framework connecting Jewish historical, "
 "biographical, and bibliographical datasets."
@@ -73,15 +73,16 @@ msgstr ""
 "*Knowledge Graph*: Ein Linked-Data-Framework, das jüdisch-historische, "
 "biografische und bibliografische Datensätze miteinander verbindet."
 
-#: ../../introduction.rst:18
+#: ../introduction.rst:18
 msgid ""
 "*Entity-Based Search*: Users can search for people, places, events, and "
 "publications through a semantically enriched database."
 msgstr ""
-"*Entitätsbasierte Suche*: Benutzer können nach Personen, Orten, Ereignissen "
-"und Publikationen in einer semantisch angereicherten Datenbank suchen."
+"*Entitätsbasierte Suche*: Benutzer können nach Personen, Orten, "
+"Ereignissen und Publikationen in einer semantisch angereicherten "
+"Datenbank suchen."
 
-#: ../../introduction.rst:19
+#: ../introduction.rst:19
 msgid ""
 "*Integration with Other Projects*: JudaicaLink integrates with "
 "established databases such as *GND, Wikidata, DBpedia, VIAF, and "
@@ -90,7 +91,7 @@ msgstr ""
 "*Integration mit anderen Projekten*: JudaicaLink integriert sich mit "
 "etablierten Datenbanken wie *GND, Wikidata, DBpedia, VIAF und Geonames*."
 
-#: ../../introduction.rst:20
+#: ../introduction.rst:20
 msgid ""
 "*Data Enrichment*: It enhances existing datasets by linking them with "
 "external sources and extracting meaningful relationships between "
@@ -100,21 +101,21 @@ msgstr ""
 "externen Quellen verbessert und bedeutungsvolle Beziehungen zwischen "
 "Entitäten extrahiert."
 
-#: ../../introduction.rst:21
+#: ../introduction.rst:21
 msgid ""
 "*Open Access and Reuse*: All data is *openly available* under principles "
 "of Linked Open Data (LOD), making it usable by other institutions and "
 "projects."
 msgstr ""
-"*Offener Zugang und Wiederverwendbarkeit*: Alle Daten sind *frei zugänglich* "
-"nach den Prinzipien von Linked Open Data (LOD) und können von anderen "
-"Einrichtungen und Projekten genutzt werden."
+"*Offener Zugang und Wiederverwendbarkeit*: Alle Daten sind *frei "
+"zugänglich* nach den Prinzipien von Linked Open Data (LOD) und können von"
+" anderen Einrichtungen und Projekten genutzt werden."
 
-#: ../../introduction.rst:24
+#: ../introduction.rst:24
 msgid "Project Partners"
 msgstr "Projektpartner"
 
-#: ../../introduction.rst:26
+#: ../introduction.rst:26
 msgid ""
 "JudaicaLink is developed and maintained in collaboration with several "
 "institutions and projects, including:"
@@ -122,49 +123,51 @@ msgstr ""
 "JudaicaLink wird in Zusammenarbeit mit verschiedenen Institutionen und "
 "Projekten entwickelt und gepflegt, darunter:"
 
-#: ../../introduction.rst:28
+#: ../introduction.rst:28
 msgid "*Hochschule Mannheim* (Mannheim University of Applied Sciences)"
-msgstr "*Hochschule Mannheim* (Mannheimer Hochschule für Angewandte Wissenschaften)"
+msgstr ""
+"*Hochschule Mannheim* (Mannheimer Hochschule für Angewandte "
+"Wissenschaften)"
 
-#: ../../introduction.rst:29
+#: ../introduction.rst:29
 msgid "*University Library Frankfurt* (UB Frankfurt)"
 msgstr "*Universitätsbibliothek Frankfurt* (UB Frankfurt)"
 
-#: ../../introduction.rst:30
+#: ../introduction.rst:30
 msgid ""
 "*FID Jüdische Studien* (Specialized Information Service for Jewish "
 "Studies)"
 msgstr "*FID Jüdische Studien* (Fachinformationsdienst Jüdische Studien)"
 
-#: ../../introduction.rst:31
+#: ../introduction.rst:31
 msgid "*Deutsche Nationalbibliothek (DNB)*"
 msgstr "*Deutsche Nationalbibliothek (DNB)*"
 
-#: ../../introduction.rst:32
+#: ../introduction.rst:32
 msgid "*Europeana* (A European digital cultural heritage initiative)"
 msgstr "*Europeana* (Eine europäische Initiative für digitales Kulturerbe)"
 
-#: ../../introduction.rst:33
+#: ../introduction.rst:33
 msgid "*National Library of Israel (NLI)*"
 msgstr "*Nationale Bibliothek Israels (NLI)*"
 
-#: ../../introduction.rst:34
+#: ../introduction.rst:34
 msgid "*DM2E (Digitised Manuscripts to Europeana)*"
 msgstr "*DM2E (Digitalisierte Manuskripte für Europeana)*"
 
-#: ../../introduction.rst:35
+#: ../introduction.rst:35
 msgid "*GND (Gemeinsame Normdatei)*"
 msgstr "*GND (Gemeinsame Normdatei)*"
 
-#: ../../introduction.rst:36
+#: ../introduction.rst:36
 msgid "*Wikidata and Wikipedia*"
 msgstr "*Wikidata und Wikipedia*"
 
-#: ../../introduction.rst:40
+#: ../introduction.rst:40
 msgid "JudaicaLink Components"
 msgstr "JudaicaLink-Komponenten"
 
-#: ../../introduction.rst:42
+#: ../introduction.rst:42
 msgid ""
 "JudaicaLink consists of multiple sub-projects that work together to "
 "support the knowledge graph and its applications:"
@@ -172,26 +175,293 @@ msgstr ""
 "JudaicaLink besteht aus mehreren Teilprojekten, die gemeinsam den "
 "Knowledge Graph und seine Anwendungen unterstützen:"
 
-#: ../../introduction.rst:45
+#: ../introduction.rst:45
 msgid "1. JudaicaLink Labs"
 msgstr "1. JudaicaLink Labs"
 
-#: ../../introduction.rst:57
+#: ../introduction.rst:47
+msgid ""
+"JudaicaLink Labs is the *core application* that powers the search and "
+"entity exploration interface. It allows users to explore Jewish-related "
+"datasets through *SPARQL queries, entity linking, and structured search*."
+msgstr ""
+"JudicaLink Labs ist die *Kernanwendung*, die die Such- und Entitäts-"
+"Explorations-Schnittstelle antreibt. Sie ermöglicht es Benutzern, "
+"jüdisch-bezogene Datensätze durch *SPARQL-Abfragen, Entitätsverknüpfung "
+"und strukturierte Suche* zu erkunden."
+
+#: ../introduction.rst:49
+msgid "Built using *Django*"
+msgstr "Mit *Django* erstellt"
+
+#: ../introduction.rst:50
+msgid "Provides a *searchable knowledge graph*"
+msgstr "Stellt einen *durchsuchbaren Knowledge Graph* bereit"
+
+#: ../introduction.rst:51
+msgid "Supports *Natural Language Processing (NLP)* for entity recognition"
+msgstr "Unterstützt *Natural Language Processing (NLP)* für die Entitätserkennung"
+
+#: ../introduction.rst:53
+msgid ""
+"\\🔗 *Labs URL*: `https://labs.judaicalink.org "
+"<https://labs.judaicalink.org>`_"
+msgstr ""
+"\\🔗 *Labs URL*: `https://labs.judaicalink.org "
+"<https://labs.judaicalink.org>`_"
+
+#: ../introduction.rst:57
 msgid "2. JudaicaLink Site"
 msgstr "2. JudaicaLink Webseite"
 
-#: ../../introduction.rst:64
+#: ../introduction.rst:59
+msgid ""
+"The JudaicaLink Site is the *public-facing static website* providing "
+"background information, project news, and dataset overviews. It is built "
+"using *Hugo* and integrates dynamically with the knowledge graph."
+msgstr ""
+"Die JudaicaLink Site ist die *öffentliche statische Website*, die "
+"Hintergrundinformationen, Projektneuigkeiten und Übersichten über "
+"Datenbestände bereitstellt. Sie wird mit *Hugo* erstellt und integriert "
+"sich dynamisch mit dem Knowledge Graph."
+
+#: ../introduction.rst:61
+msgid ""
+"\\🔗 *Site URL*: `https://www.judaicalink.org "
+"<https://www.judaicalink.org>`_"
+msgstr ""
+"\\🔗 *Site URL*: `https://www.judaicalink.org "
+"<https://www.judaicalink.org>`_"
+
+#: ../introduction.rst:64
 msgid "3. JudaicaLink Pubby"
 msgstr "3. JudaicaLink Pubby"
 
-#: ../../introduction.rst:81
+#: ../introduction.rst:66
+msgid ""
+"JudaicaLink Pubby provides a *SPARQL endpoint* and a *Linked Data "
+"interface* for accessing and querying RDF data."
+msgstr ""
+"JudaicaLink Pubby bietet einen *SPARQL-Endpunkt* und eine *Linked Data-"
+"Schnittstelle* zum Zugriff auf und Abfragen von RDF-Daten."
+
+#: ../introduction.rst:68
+msgid "Powered by *Apache Jena Fuseki*"
+msgstr "Angetrieben von *Apache Jena Fuseki*"
+
+#: ../introduction.rst:69
+msgid "Provides *triple-store access* for external applications"
+msgstr "Bietet *Triple-Store-Zugriff* für externe Anwendungen"
+
+#: ../introduction.rst:71
+msgid ""
+"\\🔗 *SPARQL Endpoint*: `https://data.judaicalink.org/sparql.html "
+"<https://data.judaicalink.org/sparql.html>`_"
+msgstr ""
+"\\🔗 *SPARQL Endpoint*: `https://data.judaicalink.org/sparql.html "
+"<https://data.judaicalink.org/sparql.html>`_"
+
+#: ../introduction.rst:74
+
+msgid "4. JudaicaLink Generators"
+msgstr "4. JudaicaLink Generatoren"
+
+#: ../introduction.rst:76
+msgid ""
+"This project contains *data ingestion scripts* that transform external "
+"data sources into *RDF triples*, making them usable in JudaicaLink."
+msgstr ""
+"Dieses Projekt enthält *Daten-Eingabe-Skripte*, die externe Datenquellen "
+"in *RDF-Tripel* umwandeln und sie in JudaicaLink nutzbar machen."
+
+
+#: ../introduction.rst:78
+msgid ""
+"\\🔗 *GitHub Repo*: `https://github.com/judaicalink/judaicalink-generators"
+"  <https://github.com/judaicalink/judaicalink-generators>`_"
+msgstr ""
+"\\🔗 *GitHub Repo*: `https://github.com/judaicalink/judaicalink-generators"
+"  <https://github.com/judaicalink/judaicalink-generators>`_"
+
+#: ../introduction.rst:81
 msgid "5. RDF Generator"
 msgstr "5. RDF-Generator"
 
-#: ../../introduction.rst:110
+#: ../introduction.rst:83
+msgid ""
+"A library for generating RDF files from structured and unstructured data "
+"sources, such as websites, spreadsheets, and full-text documents."
+msgstr ""
+"Ein Bibliothek zur Generierung von RDF-Dateien aus strukturierten und "
+"unstrukturierten Datenquellen wie Websites, Tabellenkalkulationen und "
+"Volltextdokumenten."
+
+#: ../introduction.rst:85
+msgid ""
+"\\🔗 *GitHub Repo*: `https://github.com/judaicalink/rdf_generator  "
+"<https://github.com/judaicalink/rdf_generator>`_"
+msgstr ""
+"\\🔗 *GitHub Repo*: `https://github.com/judaicalink/rdf_generator  "
+"<https://github.com/judaicalink/rdf_generator>`_"
+
+#: ../introduction.rst:88
+msgid "6. JudaicaLink Loader"
+msgstr "6. JudaicaLink Loader"
+
+#: ../introduction.rst:90
+msgid ""
+"A script that loads datasets into the triple store. It processes RDF "
+"dumps, enriches them with metadata, and uploads them to Fuseki."
+msgstr ""
+"Ein Skript, das Datensätze in den Triple-Store lädt. Es verarbeitet RDF-"
+"Dumps, angereichert sie mit Metadaten und lädt sie in Fuseki hoch."
+
+#: ../introduction.rst:92
+msgid ""
+"\\🔗 *GitHub Repo*: `https://github.com/judaicalink/judaicalink-loader "
+"<https://github.com/judaicalink/judaicalink-loader>`_"
+msgstr ""
+"\\🔗 *GitHub Repo*: `https://github.com/judaicalink/judaicalink-loader "
+"<https://github.com/judaicalink/judaicalink-loader>`_"
+
+
+#: ../introduction.rst:96
+msgid "How JudaicaLink Works"
+msgstr "Wie JudaicaLink funktioniert"
+
+#: ../introduction.rst:98
+msgid ""
+"JudaicaLink aggregates, processes, and serves structured Jewish studies "
+"data. The main workflow involves:"
+msgstr ""
+"JudaicaLink aggregiert, verarbeitet und stellt strukturierte Daten aus den"
+" Jüdischen Studien bereit. Der Hauptarbeitsablauf umfasst:"
+
+
+#: ../introduction.rst:100
+msgid ""
+"*Data Collection*: Extracting datasets from archives, digital libraries, "
+"and authority files."
+msgstr ""
+"*Datenbeschaffung*: Extrahieren von Datensätzen aus Archiven, digitalen "
+"Bibliotheken und Normdateien."
+
+#: ../introduction.rst:101
+msgid ""
+"*Data Transformation*: Converting collected data into RDF format using "
+"the *JudaicaLink RDF Generator*."
+msgstr ""
+"*Datenverarbeitung*: Konvertieren der gesammelten Daten in RDF-Format mit "
+"dem *JudaicaLink RDF Generator*."
+
+#: ../introduction.rst:102
+msgid ""
+"*Data Enrichment*: Linking entities across different sources and "
+"connecting them to *external databases* (e.g., GND, Wikidata, VIAF)."
+msgstr ""
+"*Datenanreicherung*: Verknüpfen von Entitäten aus verschiedenen Quellen "
+"und Verbinden mit *externen Datenbanken* (z.B. GND, Wikidata, VIAF)."
+
+#: ../introduction.rst:103
+msgid ""
+"*Data Storage*: Storing RDF data in *Apache Jena Fuseki* (triple store) "
+"for efficient querying."
+msgstr ""
+"*Datenablage*: Speichern von RDF-Daten in *Apache Jena Fuseki* (Triple-"
+"Store) für effiziente Abfragen."
+
+#: ../introduction.rst:104
+msgid ""
+"*Public Access*: Making the data available via: - *SPARQL Endpoint* for "
+"custom queries - *JudaicaLink Labs* for easy entity search - *JudaicaLink"
+" Site* for human-readable overviews"
+msgstr ""
+"*Öffentlicher Zugang*: Bereitstellung der Daten über: - *SPARQL-Endpunkt* "
+"für benutzerdefinierte Abfragen - *JudaicaLink Labs* für eine einfache "
+"Entitätssuche - *JudaicaLink Site* für menschenlesbare Übersichten"
+
+#: ../introduction.rst:110
 msgid "How to Use JudaicaLink"
 msgstr "Wie man JudaicaLink nutzt"
 
-#: ../../introduction.rst:133
+#: ../introduction.rst:113
+msgid "For Researchers and Historians"
+msgstr "Für Forscher und Historiker"
+
+#: ../introduction.rst:115
+msgid "*Search for Jewish figures, places, and events* using the Labs interface."
+msgstr "*Suche nach jüdischen Persönlichkeiten, Orten und Ereignissen* mit der Labs-Schnittstelle."
+
+#: ../introduction.rst:116
+msgid "*Access structured datasets* to support academic research."
+msgstr "*Zugriff auf strukturierte Datensätze* zur Unterstützung der akademischen Forschung."
+
+#: ../introduction.rst:117
+msgid "*Run SPARQL queries* to extract complex relationships and insights."
+msgstr "*Führe SPARQL-Abfragen aus*, um komplexe Beziehungen und Erkenntnisse zu extrahieren."
+
+#: ../introduction.rst:120
+msgid "For Developers and Data Scientists"
+msgstr "Für Entwickler und Datenwissenschaftler"
+
+#: ../introduction.rst:121
+msgid "*Integrate JudaicaLink data* into external applications via *SPARQL*."
+msgstr "*Integriere JudaicaLink-Daten* in externe Anwendungen über *SPARQL*."
+
+#: ../introduction.rst:122
+msgid ""
+"*Contribute to RDF generation scripts* and help expand the knowledge "
+"graph."
+msgstr ""
+"*Trage zu RDF-Generierungsskripten bei* und hilf dabei, den Knowledge "
+"Graph zu erweitern."
+
+#: ../introduction.rst:123
+msgid "*Develop new visualizations and analysis tools* based on the dataset."
+msgstr "*Entwickle neue Visualisierungen und Analysetools* basierend auf dem Datensatz."
+
+
+#: ../introduction.rst:126
+msgid "For Institutions and Digital Libraries"
+msgstr "Für Institutionen und digitale Bibliotheken"
+
+#: ../introduction.rst:128
+msgid "*Link existing digital collections* to JudaicaLink’s structured data."
+msgstr "*Verknüpfe bestehende digitale Sammlungen* mit den strukturierten Daten von JudaicaLink."
+
+#: ../introduction.rst:129
+msgid "*Share bibliographic and archival metadata* using the RDF format."
+msgstr "*Teile bibliografische und archivarische Metadaten* im RDF-Format."
+
+#: ../introduction.rst:130
+msgid ""
+"*Collaborate on data enrichment efforts* to enhance Jewish studies "
+"resources."
+msgstr ""
+"*Arbeite an Anstrengungen zur Datenanreicherung* mit, um die Ressourcen "
+"der Jüdischen Studien zu verbessern."
+
+#: ../introduction.rst:133
 msgid "Conclusion"
 msgstr "Fazit"
+
+#: ../introduction.rst:135
+msgid ""
+"JudaicaLink is an open, collaborative project that enables *structured "
+"access to Jewish studies data*. By connecting datasets, enriching "
+"metadata, and providing search and query tools, it serves as a valuable "
+"*resource for academia, libraries, and digital humanities projects*."
+msgstr ""
+"JudaicaLink ist ein offenes, kollaboratives Projekt, das *strukturierten "
+"Zugang zu Daten aus den Jüdischen Studien* ermöglicht. Indem es Datensätze "
+"verbindet, Metadaten anreichert und Such- und Abfragewerkzeuge bereitstellt, "
+"dient es als wertvolle *Ressource für die Akademie, Bibliotheken und "
+"digitale Geisteswissenschaftsprojekte*."
+
+#: ../introduction.rst:137
+msgid ""
+"\\🔗 *Start Exploring*: `https://www.judaicalink.org "
+"<https://www.judaicalink.org>`_"
+msgstr ""
+"\\🔗 *Beginnen Sie mit der Erkundung*: `https://www.judaicalink.org "
+"<https://www.judaicalink.org>`_"
