--- a/docs/locale/de/LC_MESSAGES/getting_started.po
+++ b/docs/locale/de/LC_MESSAGES/getting_started.po
@@ -80,23 +80,19 @@ msgstr "JudaicaLink Dokumentation"
 
 #: ../getting_started.rst:28 ../getting_started.rst:65
 #: ../getting_started.rst:87 ../getting_started.rst:110
-#, fuzzy
 msgid "*Clone the Repository*"
-msgstr "1. *Repository klonen*"
+msgstr "*Repository klonen*"
 
 #: ../getting_started.rst:35
-#, fuzzy
 msgid "*Create and Activate a Virtual Environment (Recommended)*"
 msgstr "*Virtuelle Umgebung erstellen und aktivieren (empfohlen)*"
 
 #: ../getting_started.rst:43 ../getting_started.rst:72
 #: ../getting_started.rst:117
-#, fuzzy
 msgid "*Install Dependencies*"
 msgstr "*Abhängigkeiten installieren*"
 
 #: ../getting_started.rst:49
-#, fuzzy
 msgid "*Build the Documentation Locally*"
 msgstr "*Dokumentation lokal erstellen*"
 
@@ -105,7 +101,6 @@ msgid "JudaicaLink Labs"
 msgstr "JudaicaLink Labs"
 
 #: ../getting_started.rst:78 ../getting_started.rst:123
-#, fuzzy
 msgid "*Run the Development Server*"
 msgstr "*Entwicklungsserver starten*"
 
@@ -114,12 +109,10 @@ msgid "JudaicaLink Site"
 msgstr "JudaicaLink Webseite"
 
 #: ../getting_started.rst:94
-#, fuzzy
 msgid "*Install Hugo* (if not installed already)"
 msgstr "*Hugo installieren* (falls nicht bereits installiert)"
 
 #: ../getting_started.rst:101
-#, fuzzy
 msgid "*Build and Serve the Site*"
 msgstr "*Webseite erstellen und bereitstellen*"
 
